apps/overlays/zion/immich/patch-env-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: immich
  namespace: immich
spec:
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
      - name: postgres
