apps/overlays/zion/immich/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: immich
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
      - name: immich
