apps/overlays/zion/immich/ingress.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-traefik-outpost
#   namespace: immich
# spec:
#   type: ExternalName
#   externalName: auth-traefik-outpost.authentik.svc.cluster.local
#   ports:
#     - port: 9000
#       targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.milanchis.com`) && PathPrefix(`/api/socket.io`)
      kind: Rule
      priority: 5
      services:
        - name: zion-immich
          port: 80
          sticky:
            cookie:
              name: openwebui-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-immich-ws-headers
        - name: zion-immich-cors
    - match: Host(`immich.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-immich
          port: 80
          sticky:
            cookie:
              name: immich-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-immich-cors
        # - name: zion-immich-auth-middleware
    # - match: Host(`immich.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
    #   kind: Rule
    #   priority: 15
    #   services:
    #     - name: auth-traefik-outpost
    #       port: 9000
    #   middlewares:
    #     - name: zion-immich-cors

  tls:
    secretName: immich-certificate-secret
